--- a/src/main/resources/templates/discussion-post.html
+++ b/src/main/resources/templates/discussion-post.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en  ">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -161,14 +161,34 @@
     <a href="/login" style="float: right; font-size: 14px;">로그인/회원가입</a>
     <!-- 필요한 만큼 네비게이션 바 항목을 추가하세요 -->
 </nav>
+<table>
+    <tr>
+        <th>게시글</th>
+    </tr>
+    <tr >
+        <td th:text="${post.id}"></td>
+        <th th:text="${post.Title}"></th>
+        <th th:text="${post.Content}"></th>
 
-<section>
-    <h2>최신 글 목록</h2>
-    <!-- 여기에 최신 글 목록이나 게시물 리스트를 나타내는 내용을 추가하세요 -->
-</section>
+    </tr>
+</table>
+<button onclick="deleteReq()">삭제</button>
+<button onclick="updateReq()">수정</button>
 
 <footer>
     <p>&copy; 2024 컴투스 프로야구 V24 커뮤니티</p>
 </footer>
 </body>
+<script th:inline="javascript">
+    const deleteReq = () => {
+           console.log("삭제 요청");
+           const id = [[${post.id}]];
+           location.href = "/discussion/delete/" + id;
+       }
+    const updateReq = () => {
+        console.log("수정 요청");
+        const id = [[${post.id}]];
+        location.href = "/discussion/edit/" + id;
+    }
+</script>
 </html>
