--- a/src/main/resources/templates/create-post.html
+++ b/src/main/resources/templates/create-post.html
@@ -119,45 +119,58 @@
 
 <h2>Create Post</h2>
 
-    <a href="/">홈</a>
+<a href="/">홈</a>
 
-    <div class="dropdown">
-        <button class="dropbtn">자유 게시판</button>
-        <div class="nav-content">
-            <a href="/discussion">토론장</a>
-            <a href="#rants">투기장</a>
-        </div>
+<div class="dropdown">
+    <button class="dropbtn">자유 게시판</button>
+    <div class="nav-content">
+        <a href="/discussion">토론장</a>
+        <a href="#rants">투기장</a>
     </div>
+</div>
 
-    <div class="dropdown">
-        <button class="dropbtn">공략</button>
-        <div class="nav-content">
-            <a href="#generalStrategy">공통 공략</a>
-            <div class="dropdown">
-                <button class="dropbtn">팀별 공략</button>
-                <div class="nav-content">
-                    <a href="#kia">기아 타이거즈</a>
-                    <a href="#ssg">삼성 라이온즈</a>
-                    <a href="#ssg">SSG 랜더스</a>
-                    <a href="#ssg">롯데 자이언츠</a>
-                    <a href="#ssg">키움 히어로즈</a>
-                    <a href="#ssg">NC 다이노스</a>
-                    <a href="#ssg">KT 위즈</a>
-                    <a href="#ssg">두산 베어스</a>
-                    <a href="#ssg">LG 트윈스</a>
-                    <a href="#ssg">한화 이글스</a>
+<div class="dropdown">
+    <button class="dropbtn">공략</button>
+    <div class="nav-content">
+        <a href="#generalStrategy">공통 공략</a>
+        <div class="dropdown">
+            <button class="dropbtn">팀별 공략</button>
+            <div class="nav-content">
+                <a href="#kia">기아 타이거즈</a>
+                <a href="#ssg">삼성 라이온즈</a>
+                <a href="#ssg">SSG 랜더스</a>
+                <a href="#ssg">롯데 자이언츠</a>
+                <a href="#ssg">키움 히어로즈</a>
+                <a href="#ssg">NC 다이노스</a>
+                <a href="#ssg">KT 위즈</a>
+                <a href="#ssg">두산 베어스</a>
+                <a href="#ssg">LG 트윈스</a>
+                <a href="#ssg">한화 이글스</a>
 
-                    <!-- 다른 팀들에 대한 항목도 추가하세요 -->
-                </div>
+                <!-- 다른 팀들에 대한 항목도 추가하세요 -->
             </div>
         </div>
     </div>
+</div>
 
-    <a href="/questions">질문</a>
-    <a href="/brags">자랑</a>
-    <a href="/clubPromotion">클럽 홍보</a>
+<a href="/questions">질문</a>
+<a href="/brags">자랑</a>
+<a href="/clubPromotion">클럽 홍보</a>
+<div th:if="${member == null}">
     <a href="/login" style="float: right; font-size: 14px;">로그인/회원가입</a>
-    <!-- 필요한 만큼 네비게이션 바 항목을 추가하세요 -->
+</div>
+<div th:if="${member != null}">
+    <a style="float: right; font-size: 14px;">
+        <div class="col">
+            <form th:action="@{/login/logout}" method="post">
+                <button class="w-100 btn btn-dark btn-lg" type="submit">
+                    로그아웃
+                </button>
+            </form>
+        </div>
+    </a>
+    <a href="/myPage" th:text="|사용자: ${member.name}|" style="float: right; font-size: 14px;"></a>
+</div>    <!-- 필요한 만큼 네비게이션 바 항목을 추가하세요 -->
 </nav>
 
 <form action="/posts/create" method="post">
