--- a/src/main/resources/templates/discussion-posts.html
+++ b/src/main/resources/templates/discussion-posts.html
@@ -158,7 +158,21 @@
     <a href="/questions">질문</a>
     <a href="/brags">자랑</a>
     <a href="/clubPromotion">클럽 홍보</a>
-    <a href="/login" style="float: right; font-size: 14px;">로그인/회원가입</a>
+    <div th:if="${member == null}">
+        <a href="/login" style="float: right; font-size: 14px;">로그인/회원가입</a>
+    </div>
+    <div th:if="${member != null}">
+        <a style="float: right; font-size: 14px;">
+            <div class="col">
+                <form th:action="@{/login/logout}" method="post">
+                    <button class="w-100 btn btn-dark btn-lg" type="submit">
+                        로그아웃
+                    </button>
+                </form>
+            </div>
+        </a>
+        <a href="/myPage" th:text="|사용자: ${member.name}|" style="float: right; font-size: 14px;"></a>
+    </div>
     <!-- 필요한 만큼 네비게이션 바 항목을 추가하세요 -->
 </nav>
 <form action="/discussion/save" method="get">
@@ -169,7 +183,11 @@
         <th>게시글 목록</th>
     </tr>
     <tr th:each="post: ${postList}">
-        <td><a th:href="@{/discussion/{postId}(postId=${post.id})}" th:text="${post.Title}"></a></td>
+        <td>
+            <a th:href="@{/discussion/{postId}(postId=${post.id})}">
+                <span th:text="${post.writer} + ' - ' + ${post.title}"></span>
+            </a>
+        </td>
     </tr>
 </table>
 
