--- a/src/main/resources/templates/members/addMemberForm.html
+++ b/src/main/resources/templates/members/addMemberForm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,6 +17,5 @@
     <input type="text" id="name" name="name" required><br><br>
     <button type="submit">회원가입</button>
 </form>
-
 </body>
 </html>
