--- a/src/main/resources/templates/members/loginForm.html
+++ b/src/main/resources/templates/members/loginForm.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
 </head>
 <body>
 <h2>Login</h2>
-<form action="/login" method="post">
-    <div>
-        <label for="loginId">Login ID:</label>
-        <input type="text" id="loginId" name="loginId" required>
-    </div>
-    <div>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-    </div>
+<form th:action="@{'/login'}" th:method="post" th:object="${loginForm}">
+    <input type="hidden" th:name="redirectURL" th:value="${param.redirectURL}" />
+    <label for="loginId">Login ID:</label>
+    <input type="text" id="loginId" name="loginId" th:field="${loginForm.loginId}" required>
+    <label for="password">Password:</label>
+    <input type="text" id="password" name="password" th:field="${loginForm.password}" required>
     <button type="submit">Login</button>
 </form>
 <p>Don't have an account? <a href="/login/add">Sign up</a></p>
