--- a/src/main/resources/templates/discussion/save.html
+++ b/src/main/resources/templates/discussion/save.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>컴투스 프로야구 V24 커뮤니티</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/style.css">
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script>
         $(document).ready(function () {
@@ -135,7 +135,7 @@
     <div class="dropdown">
         <button class="dropbtn">공략</button>
         <div class="nav-content">
-            <a href="#generalStrategy">공통 공략</a>
+            <a href="/tip">공통 공략</a>
             <div class="dropdown">
                 <button class="dropbtn">팀별 공략</button>
                 <div class="nav-content">
