--- a/src/main/resources/templates/loginHome.html
+++ b/src/main/resources/templates/loginHome.html
@@ -39,7 +39,7 @@
     <div class="dropdown">
         <button class="dropbtn">공략</button>
         <div class="nav-content">
-            <a href="#generalStrategy">공통 공략</a>
+            <a href="/tip">공통 공략</a>
             <div class="dropdown">
                 <button class="dropbtn">팀별 공략</button>
                 <div class="nav-content">
